--- a/02-vars.yml
+++ b/02-vars.yml
@@ -17,3 +17,13 @@
       ansible.builtin.debug:
         msg: URL = {{URL}}
 
+
+
+- name: Task level variable
+  hosts: all
+  tasks:
+    -name: Print URL
+    ansible.builtin.debug:
+      msg: URL = {{URL}}
+      vars:
+        URL: task.example.com
