--- a/04-loops.yml
+++ b/04-loops.yml
@@ -4,3 +4,7 @@
     - name: Print Debug
       ansible.builtin.debug:
         msg: Hello world
+      loops:
+        - apple
+        - banana
+        - orange
