--- a/04-loops.yml
+++ b/04-loops.yml
@@ -1,10 +1,10 @@
 - name: Demo on Loops
-  hosts: all
+  hosts: localhost
   tasks:
     - name: Print Debug
       ansible.builtin.debug:
         msg: Hello world
-      loops:
+      loop:
         - apple
         - banana
         - orange
