--- a/04-loops.yml
+++ b/04-loops.yml
@@ -3,7 +3,7 @@
   tasks:
     - name: Print Debug
       ansible.builtin.debug:
-        msg: Hello world
+        msg: Fruit Name = {{item}}
       loop:
         - apple
         - banana
