--- a/04-loops.yml
+++ b/04-loops.yml
@@ -1,10 +1,18 @@
 - name: Demo on Loops
   hosts: localhost
   tasks:
-    - name: Print Debug
+    - name: Print Debug with list of Value Loop
       ansible.builtin.debug:
         msg: Fruit Name = {{item}}
       loop:
         - apple
         - banana
         - orange
+
+    - name: Print Debug with list of Maps
+      ansible.builtin.debug:
+        msg: Fruit Name = {{item}}
+      loop:
+        - { name: "apple", quantity: 100 }
+        - { name: "banana", quantity: 200 }
+        - { name: "mango", quantity: 50 }
